Add My Ads Screen

--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
         </div>
       </div>
     </nav>
-    <!-- Main -->
+    <!-- Main Wrapper -->
     <main class="main-content">
+      <!-- Home Screen -->
       <div
         id="my-home-screen"
         class="section main-content-section is-active animate__animated animate__fadeIn"
@@ -218,19 +219,302 @@
           </div>
         </div>
       </div>
-
+      <!-- My Ads Screen -->
       <div
         id="my-ads-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
-        Some content here
+        <div class="tile is-ancestor">
+          <div class="tile is-12 is-vertical is-parent">
+            <div class="tile is-child box">
+              <div class="columns is-vcentered">
+                <div class="column is-1">
+                  <figure class="image ad-image">
+                    <img src="images/Bota-Box-Cabernet-Sauvignon.jpeg" alt="" />
+                  </figure>
+                </div>
+                <div class="column is-3">
+                  <p class="title">Bota Box Cabernet Sauvignon</p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Started:</strong> May, 10, 2023 <br />
+                    <strong>Ended:</strong> May, 17, 2023
+                  </p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Budget:</strong> $15<br />
+                    <strong>Status:</strong>
+                    <span class="has-text-success">Active</span>
+                  </p>
+                </div>
+                <div class="column is-2 has-text-right">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-play"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-pause"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-stop"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+                <div class="column is-2">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small is-info">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-edit"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small is-danger">
+                        <span class="icon is-small">
+                          <i class="fa-regular fa-trash-can"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tile is-child box">
+              <div class="columns is-vcentered">
+                <div class="column is-1">
+                  <figure class="image ad-image">
+                    <img
+                      src="images/Kim-Crawford-Sauvignon-Blanc.jpeg"
+                      alt=""
+                    />
+                  </figure>
+                </div>
+                <div class="column is-3">
+                  <p class="title">Kim Crawford Sauvignon Blanc</p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Started:</strong> May, 10, 2023 <br />
+                    <strong>Ended:</strong> May, 24, 2023
+                  </p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Budget:</strong> $25<br />
+                    <strong>Status:</strong>
+                    <span class="has-text-success">Active</span>
+                  </p>
+                </div>
+                <div class="column is-2 has-text-right">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-play"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-pause"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-stop"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+                <div class="column is-2">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small is-info">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-edit"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small is-danger">
+                        <span class="icon is-small">
+                          <i class="fa-regular fa-trash-can"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tile is-child box">
+              <div class="columns is-vcentered">
+                <div class="column is-1">
+                  <figure class="image ad-image">
+                    <img src="images/La-Marca-Prosecco-1.jpeg" alt="" />
+                  </figure>
+                </div>
+                <div class="column is-3">
+                  <p class="title">La Marca Prosecco</p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Started:</strong> May, 8, 2023 <br />
+                    <strong>Ended:</strong> May, 12, 2023
+                  </p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Budget:</strong> $12<br />
+                    <strong>Status:</strong>
+                    <span class="has-text-warning">Paused</span>
+                  </p>
+                </div>
+                <div class="column is-2 has-text-right">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-play"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-pause"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-stop"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+                <div class="column is-2">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small is-info">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-edit"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small is-danger">
+                        <span class="icon is-small">
+                          <i class="fa-regular fa-trash-can"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tile is-child box">
+              <div class="columns is-vcentered">
+                <div class="column is-1">
+                  <figure class="image ad-image">
+                    <img
+                      src="images/Josh-Cellars-Cabernet-Sauvignon.jpeg"
+                      alt=""
+                    />
+                  </figure>
+                </div>
+                <div class="column is-3">
+                  <p class="title">Josh-Cellars-Cabernet-Sauvignon</p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Started:</strong> May, 2, 2023 <br />
+                    <strong>Ended:</strong> May, 7, 2023
+                  </p>
+                </div>
+                <div class="column is-2">
+                  <p class="subtitle">
+                    <strong>Budget:</strong> $10<br />
+                    <strong>Status:</strong>
+                    <span class="has-text-danger">Stopped</span>
+                  </p>
+                </div>
+                <div class="column is-2 has-text-right">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-play"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-pause"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-stop"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+                <div class="column is-2">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <button class="button is-small is-info">
+                        <span class="icon is-small">
+                          <i class="fa-solid fa-edit"></i>
+                        </span>
+                      </button>
+                    </p>
+                    <p class="control">
+                      <button class="button is-small is-danger">
+                        <span class="icon is-small">
+                          <i class="fa-regular fa-trash-can"></i>
+                        </span>
+                      </button>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- My Products Screen -->
       <div
         id="my-products-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
         Some content here
       </div>
+      <!-- My Stats Screen -->
       <div
         id="my-stats-screen"
         class="section main-content-section animate__animated animate__fadeIn"
@@ -269,7 +553,7 @@
       </nav>
     </footer>
     <!-- Notifications -->
-    <div class="notification-area">
+    <div class="notification-area is-hidden">
       <div
         class="notification is-success is-light animate__animated animate__slideInUp"
       >
@@ -328,7 +612,7 @@
             <p class="title has-text-centered">
               Choose your advertisement dates:
             </p>
-            <div class="columns">
+            <div class="columns is-mulitine">
               <div class="column is-6-desktop is-offset-3-desktop is-12-mobile">
                 <form action="">
                   <div class="field is-horizontal">
@@ -370,6 +654,11 @@
                   </div>
                 </form>
               </div>
+            </div>
+            <div class="notification is-info is-light">
+              <p class="has-text-centered">
+                Your advertisment budget will be: <strong>$12</strong>
+              </p>
             </div>
           </div>
           <div
@@ -460,17 +749,24 @@
             </div>
           </div>
         </section>
-        <footer class="modal-card-foot">
-          <div class="buttons prev-next-buttons">
-            <button class="modal-button button">
+        <footer class="modal-card-foot is-justify-content-center">
+          <div class="prev-next-buttons buttons">
+            <button class="modal-button button prev-button">
               <span class="icon">
                 <i class="fa-solid fa-chevron-left"></i> </span
               ><span>Prev</span>
             </button>
-            <button class="modal-button button">
+            <button class="modal-button button next-button">
               <span>Next</span
               ><span class="icon">
                 <i class="fa-solid fa-chevron-right"></i>
+              </span></button
+            ><button
+              class="modal-button button finish-button is-success modal-button-close"
+            >
+              <span>Finish</span
+              ><span class="icon">
+                <i class="fa-solid fa-check"></i>
               </span>
             </button>
           </div>
