Add products screen

--- a/index.html
+++ b/index.html
@@ -512,7 +512,356 @@
         id="my-products-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
-        Some content here
+        <div class="container">
+          <div class="tile is-ancestor">
+            <div class="tile is-6 is-parent">
+              <div class="tile is-child box">
+                <div class="columns is-multiline">
+                  <div class="column is-4">
+                    <figure class="image product-image">
+                      <img
+                        src="images/Bota-Box-Cabernet-Sauvignon.jpeg"
+                        alt=""
+                      />
+                    </figure>
+                  </div>
+                  <div class="column is-8">
+                    <div class="level">
+                      <level-item
+                        ><p class="title">
+                          <span> Bota Box Cabernet Sauvignon</span>
+                        </p>
+                        <p class="subtitle">United States</p></level-item
+                      >
+                      <level-item
+                        ><span class="buttons has-addons">
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-solid fa-edit"></i>
+                            </span>
+                          </button>
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-regular fa-trash-can"></i>
+                            </span></button></span
+                      ></level-item>
+                    </div>
+
+                    <table class="table is-striped is-narrow">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Bota Box Wines</td>
+                      </tr>
+                      <tr>
+                        <td>Categories</td>
+                        <td>Cabernet Sauvignon, Red Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Tasting Notes</td>
+                        <td>Currant, Jammy, Spicy</td>
+                      </tr>
+                      <tr>
+                        <td>ABV</td>
+                        <td>13.5%</td>
+                      </tr>
+                      <tr>
+                        <td>Food Pairing</td>
+                        <td>Beef, Pasta</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Glassware</td>
+                        <td>Bordeaux Glass</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Serving Temperature</td>
+                        <td>60-65° F</td>
+                      </tr>
+                      <tr>
+                        <td>Sweet-Dry Scale</td>
+                        <td>Dry Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Body</td>
+                        <td>Full</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <p class="product-description">
+                  Bota Box Cabernet Sauvignon offers aromas of black cherry and
+                  red currant in the glass with just a touch of cedar and
+                  vanilla. Medium in body, this wine is supple and juicy with
+                  rich flavors of ripe cherry, plum and spice on the finish.
+                  Bota Box Cabernet Sauvignon is an ideal partner for barbecued
+                  meats, hearty stews or pasta served with marinara sauce.
+                </p>
+              </div>
+            </div>
+            <div class="tile is-6 is-parent">
+              <div class="tile is-child box">
+                <div class="columns is-multiline">
+                  <div class="column is-4">
+                    <figure class="image product-image">
+                      <img
+                        src="images/Josh-Cellars-Cabernet-Sauvignon.jpeg"
+                        alt=""
+                      />
+                    </figure>
+                  </div>
+                  <div class="column is-8">
+                    <div class="level">
+                      <level-item
+                        ><p class="title">
+                          <span>Josh Cellars Cabernet Sauvignon</span>
+                        </p>
+                        <p class="subtitle">United States</p></level-item
+                      >
+                      <level-item
+                        ><span class="buttons has-addons">
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-solid fa-edit"></i>
+                            </span>
+                          </button>
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-regular fa-trash-can"></i>
+                            </span></button></span
+                      ></level-item>
+                    </div>
+
+                    <table class="table is-striped is-narrow">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Josh Cellars</td>
+                      </tr>
+                      <tr>
+                        <td>Categories</td>
+                        <td>Cabernet Sauvignon, Red Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Tasting Notes</td>
+                        <td>Cherry, Berry, Oak, Vanilla</td>
+                      </tr>
+                      <tr>
+                        <td>ABV</td>
+                        <td>13.9%</td>
+                      </tr>
+                      <tr>
+                        <td>Food Pairing</td>
+                        <td>Beef, Dessert - Chocolate & Coffee</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Glassware</td>
+                        <td>Bordeaux Glass</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Serving Temperature</td>
+                        <td>60-65° F</td>
+                      </tr>
+                      <tr>
+                        <td>Sweet-Dry Scale</td>
+                        <td>Dry Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Body</td>
+                        <td>Full</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <p class="product-description">
+                  Our Cabernet Sauvignon was the first wine we made. This is the
+                  wine that started it all, setting the exacting standards that
+                  we hold ourselves to for all of our varietals. Round and
+                  juicy, our Cabernet Sauvignon has flavors of blackberry,
+                  toasted hazelnut and cinnamon, complemented by hints of
+                  vanilla and toasted oak.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-ancestor">
+            <div class="tile is-6 is-parent">
+              <div class="tile is-child box">
+                <div class="columns is-multiline">
+                  <div class="column is-4">
+                    <figure class="image product-image">
+                      <img
+                        src="images/Santa-Margherita-Pinot-Grigio-DOC.jpeg"
+                        alt=""
+                      />
+                    </figure>
+                  </div>
+                  <div class="column is-8">
+                    <div class="level">
+                      <level-item
+                        ><p class="title">
+                          <span>Santa Margherita Pinot Grigio DOC</span>
+                        </p>
+                        <p class="subtitle">Italy</p></level-item
+                      >
+                      <level-item
+                        ><span class="buttons has-addons">
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-solid fa-edit"></i>
+                            </span>
+                          </button>
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-regular fa-trash-can"></i>
+                            </span></button></span
+                      ></level-item>
+                    </div>
+
+                    <table class="table is-striped is-narrow">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Santa Margherita</td>
+                      </tr>
+                      <tr>
+                        <td>Categories</td>
+                        <td>Pinot Grigio, White Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Tasting Notes</td>
+                        <td>Apple, Bright, Citrus, Fresh, Fruity, Light</td>
+                      </tr>
+                      <tr>
+                        <td>ABV</td>
+                        <td>12.5%</td>
+                      </tr>
+                      <tr>
+                        <td>Food Pairing</td>
+                        <td>Shellfish, Salads & Greens</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Glassware</td>
+                        <td>Standard White Glass</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Serving Temperature</td>
+                        <td>45-50° F</td>
+                      </tr>
+                      <tr>
+                        <td>Sweet-Dry Scale</td>
+                        <td>Dry Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Body</td>
+                        <td>Light</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <p class="product-description">
+                  The wine is dry with intense aromas and appealing flavors of
+                  Golden Delicious apples and citrus with a long, multi-layered
+                  finish. Excellent as an aperitif and with a medium body that
+                  makes it versatile to pair with everything from salads to
+                  chicken or grilled fish. Wonderful pairing ideas include
+                  butter lettuce with apples, walnuts and pomegranate seeds,
+                  pizza topped with prosciutto and arugula, scallops with
+                  tarragon cream, or tagliatelle with Italian olive oil, lemon
+                  zest and pine nuts.
+                </p>
+              </div>
+            </div>
+            <div class="tile is-6 is-parent">
+              <div class="tile is-child box">
+                <div class="columns is-multiline">
+                  <div class="column is-4">
+                    <figure class="image product-image">
+                      <img src="images/Meiomi-Pinot-Noir.jpeg" alt="" />
+                    </figure>
+                  </div>
+                  <div class="column is-8">
+                    <div class="level">
+                      <level-item
+                        ><p class="title">
+                          <span>Meiomi Pinot Noir</span>
+                        </p>
+                        <p class="subtitle">United States</p></level-item
+                      >
+                      <level-item
+                        ><span class="buttons has-addons">
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-solid fa-edit"></i>
+                            </span>
+                          </button>
+                          <button class="button is-small">
+                            <span class="icon is-small">
+                              <i class="fa-regular fa-trash-can"></i>
+                            </span></button></span
+                      ></level-item>
+                    </div>
+
+                    <table class="table is-striped is-narrow">
+                      <tr>
+                        <td>Brand</td>
+                        <td>Meiomi Wines</td>
+                      </tr>
+                      <tr>
+                        <td>Categories</td>
+                        <td>Pinot Noir, Red Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Tasting Notes</td>
+                        <td>Dark Fruit, Mocha, Oak</td>
+                      </tr>
+                      <tr>
+                        <td>ABV</td>
+                        <td>13.7%</td>
+                      </tr>
+                      <tr>
+                        <td>Food Pairing</td>
+                        <td>Lamb, Pasta</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Glassware</td>
+                        <td>Burgundy / Bourgogne Glass</td>
+                      </tr>
+                      <tr>
+                        <td>Suggested Serving Temperature</td>
+                        <td>55-60° F</td>
+                      </tr>
+                      <tr>
+                        <td>Sweet-Dry Scale</td>
+                        <td>Dry Wine</td>
+                      </tr>
+                      <tr>
+                        <td>Body</td>
+                        <td>Light</td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <p class="product-description">
+                  Meiomi Pinot Noir Red Wine brings you structure and depth
+                  seldom seen in a pinot noir wine, thanks to its unique and
+                  meticulous aging process. Aged for six months in French oak
+                  barrels, this California red wine's juicy strawberry flavor
+                  and notes of dark berries and toasted mocha add complexity and
+                  depth on the palate. With a rich garnet color and a ruby edge,
+                  this pinot noir wine permeates aromas of bright fruit jam,
+                  mocha and oak. This California wine owes much of its
+                  complexity to its varied upbringing, featuring grapes
+                  harvested from Monterey, Santa Barbara and Sonoma. The silky
+                  texture and balanced acidity of this Meiomi wine make it a
+                  perfect table top companion for dark chocolate or thin crust
+                  pizza. Meiomi Pinot Noir offers a full-bodied taste that stays
+                  with you for a lengthy finish no matter the meal. It's that
+                  unrivaled taste that earned this California red wine 92 points
+                  from The Tasting Panel. Bring out this bottle of wine at your
+                  next get-together for a lasting impression. Please enjoy our
+                  wines responsibly. © 2020 Meiomi Wines, Acampo, CA
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- My Stats Screen -->
       <div
@@ -657,7 +1006,7 @@
             </div>
             <div class="notification is-info is-light">
               <p class="has-text-centered">
-                Your advertisment budget will be: <strong>$12</strong>
+                Your estimated budget will be: <strong>$12</strong>
               </p>
             </div>
           </div>
