--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             </div>
           </div>
         </div>
-        <div class="container has-text-centered m-5">
+        <div class="container has-text-centered is-fluid my-5">
           <button
             class="button modal-button is-medium"
             data-target="add-ad-modal"
@@ -876,7 +876,7 @@
             </div>
           </div>
         </div>
-        <div class="container has-text-centered m-5">
+        <div class="container has-text-centered is-fluid my-5">
           <button
             class="button modal-button is-medium"
             data-target="add-product-modal"
@@ -940,6 +940,25 @@
     </div>
 
     <!-- Modals -->
+    <!-- Help modal -->
+    <div id="help-modal" class="modal modal-full-screen modal-fx-fadeInScale">
+      <div class="modal-background"></div>
+      <div class="modal-content modal-card">
+        <header class="modal-card-head">
+          <p class="modal-card-title">Help and suport</p>
+          <button class="modal-button-close delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">Help content will be here</section>
+        <footer class="modal-card-foot is-justify-content-center">
+          <nav class="level is-flex-grow-1">
+            <a class="level-item"> About us </a>
+            <a class="level-item"> Documentation </a>
+            <a class="level-item"> FAQ </a>
+            <a class="level-item"> Suppoort </a>
+          </nav>
+        </footer>
+      </div>
+    </div>
     <!-- Add new ad modal -->
     <div id="add-ad-modal" class="modal modal-full-screen modal-fx-fadeInScale">
       <div class="modal-background"></div>
